# Orlyata-zashkvaryata

./: README.md
server/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  configDB  configWS  cppserver  machine_learn.py  run  server.sqlite
server/ans/: .ans27.08.2018 05:37:06.csv.swp  .anst1t27.08.201808:30:30.csv.swp  anst1t27.08.201808:30:30.csv  description
server/boris/: nytak  pik  pik2  pleaseWork  ploho  takayasebe  testSleep  train_boris.py  unbelieveable  vinovatVadim  work_boris.py
server/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
server/config/: database.json  dataset.json  datasetK.json  datasetT.json
server/data/: 27.08.2018 05:38:35.csv  27.08.2018 05:38:36.csv  27.08.2018 05:38:37.csv  27.08.2018 05:38:38.csv  27.08.2018 05:38:39.csv  27.08.2018 05:38:40.csv  27.08.2018 05:38:41.csv  27.08.2018 05:38:42.csv  27.08.2018 05:38:43.csv  27.08.2018 05:38:44.csv  27.08.2018 05:38:45.csv  27.08.2018 05:38:46.csv  27.08.2018 05:38:47.csv  27.08.2018 05:38:48.csv  27.08.2018 05:38:49.csv  27.08.2018 05:38:50.csv  27.08.2018 05:38:51.csv  27.08.2018 05:38:52.csv  27.08.2018 05:38:53.csv  27.08.2018 05:38:54.csv  27.08.2018 05:38:55.csv  27.08.2018 05:38:56.csv  27.08.2018 05:38:57.csv  27.08.2018 05:38:58.csv  27.08.2018 05:38:59.csv  27.08.2018 05:39:00.csv  27.08.2018 05:39:01.csv  27.08.2018 05:39:02.csv  27.08.2018 05:39:03.csv  27.08.2018 05:39:04.csv  27.08.2018 05:39:05.csv  27.08.2018 05:39:06.csv  27.08.2018 05:39:07.csv  27.08.2018 05:39:08.csv  (+114 more)
server/learn/: keys  (+8 more)
(+118 files in other folders)
